# dst-log-reader

./: .gitignore  README.md  about_static.html  build.sh  index.html  lingui.config.ts  package-lock.json  package.json  run.sh  tailwind.config.js  vite.config.ts
page/: index.html  main.js  output.css  tw.sh
page/en/: index.html
page/zh/: index.html
src/: App.css  App.tsx  global.d.ts  hooks.ts  main.tsx  polyfill.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/lines-0.0.6/: Cargo.toml
src-tauri/lines-0.0.6/src/: linemapper.rs  linereader.rs
src-tauri/src/: bootstrap.rs  ds_log.rs  lib.rs  main.rs  menu.rs  reader.rs  steam_workshop.rs  window.rs
src/components/LogList/: index.tsx
src/components/MenuIcon/: index.tsx
src/components/ModifiedTime/: index.tsx
src/components/RunTime/: index.tsx
src/components/SidePanel/: index.tsx
src/locales/: en.po  en.ts  zh.po  zh.ts
src/pages/AboutPage/: index.tsx
src/pages/LogBrowserPage/: geticon.ts  index.tsx  monaco.config.tsx
src/pages/SettingsPage/: index.tsx
