[package]
name = "log-reader"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "log_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lines = { path = "./lines-0.0.6" }
once_cell = "1.20.3"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
tauri-plugin-store = "2.2.0"
json = "0.12.4"
zip = { version = "2.2.2", default-features = false, features = ["deflate", "time"] }
num_cpus = "1.16.0"
tauri-plugin-dialog = "2.2.0"
webbrowser = "1.0.3"
uuid = { version = "1.15.1", features = ["v4", "v5"] }
rental = "0.5.6"
raw-window-handle = "0.6.2"
chrono = "0.4.40"
